--- a/index.html
+++ b/index.html
@@ -18,10 +18,20 @@
       <div class="animated infinite pulse">
     <button id="myton" class="animated zoomInDown" ><img class="img2" src="images/Down_Arrow_Download.png" class="dropbtn"></button><br>
   </div>
+
       <div id="myDropdown" class="dropdown-content">
-        <a href="https://enigmatic-springs-56858.herokuapp.com/" class="animated fadeIn">Video call Website<br><img class="imgB" src="images/death-star-clipart-1.jpg"></a>
-          <a href="https://arcane-scrubland-17622.herokuapp.com/" class="animated fadeInUp">Fitness App<img class="imgB" src="images/thisone.gif"></a>
-          <a href="https://erikslewis.github.io/gofilter/"class="animated lightSpeedIn">GROUP PROJECT<img class="imgB" src="images/xx.gif"></a>
+        <div class="tooltip">
+          <span class="tooltiptext">Peer to Peer video chat Website Built on Rails 5 Using Postgres Database</span>
+          <a href="https://enigmatic-springs-56858.herokuapp.com/"  class="animated fadeIn">Face Time World<br><img class="imgB" src="images/death-star-clipart-1.jpg"></a>
+        </div>
+          <div class="tooltip">
+            <span class="tooltiptext">Cutting Edge Personal Training  Fitness App With Full CRUD Capabilities </span>
+          <a href="https://arcane-scrubland-17622.herokuapp.com/" class="animated fadeInUp">Personal Trainer App<img class="imgB" src="images/thisone.gif"></a>
+        </div>
+          <div class="tooltip">
+            <span class="tooltiptext">Group Project Collaboration On GitHub Making A Single Page App Built With The MEAN STACK</span>
+          <a href="https://erikslewis.github.io/gofilter/"class="animated lightSpeedIn">Photo Filter <img class="imgB" src="images/xx.gif"></a>
+</div>
       </div>
     </div><br>
 
@@ -94,7 +104,7 @@
       <a href="https://erikslewis.github.io/iron-man/"><img src="images/imageedit_7_5022970184.png"/><br>IRONMAN GAME</a>
       <a href="https://erikslewis.github.io/pixart_js/"><img src="images/sshot4ceba87fb2a60.jpg"/><br>PICASSO ART!</a>
 
-      <a href="https://arcane-scrubland-17622.herokuapp.com/"><img src="images/15910186_10207444276817050_233251890_n.jpg"/><br>FITNESS APP</a>
+      <a href="https://erikslewis.github.io/Video-chat/"><img src="images/15910186_10207444276817050_233251890_n.jpg"/><br>Face Time World </a>
       <a href="https://erikslewis.github.io/hangmanproject/"><img src="images/PICw.jpg"/><br>HANGMAN GAME</a>
 
     </div>
@@ -107,7 +117,7 @@
   <div id="About" class="tabcontent">
     <h3>About Me</h3><br>
     <img src="images/148476564950119.png" charset="utf-8" style="width:300px; height:300px;">
-    <h2> Hi I'm Erik Shepard-Lewis, former Rugby League player. Now I am currently training at General Assembly to become full stack Web Developer. I have obtained many skills as listed in the skill section. Every day I'm Continuously trying to learn and master new languages, frameworks and databases. I'm also an extremely fast learner. I love building things and being creative, making ideas come to life. The possibilities are limitless!  </h2>
+    <h2> Hi I'm Erik Shepard-Lewis, a former Rugby League player. I have just Completed a full time 9am to 5pm 3 month immersive training program at General Assembly. Solely focused on building my skills to become full stack Web Developer. I have obtained many skills as listed in the skill section. Every day I'm Continuously trying to learn and master new languages, frameworks and databases. I'm also an extremely fast learner. I love building things, helping people and being creative, making ideas come to life. The possibilities are limitless!  </h2>
 </div>
 
 <div class="Fly">
