--- a/index.html
+++ b/index.html
@@ -20,16 +20,16 @@
   </div>
 
       <div id="myDropdown" class="dropdown-content">
-        <div class="tooltip">
-          <span class="tooltiptext">Peer to Peer video chat Website Built on Rails 5 Using Postgres Database</span>
+        <div class="tooltip1">
+          <span class="tooltiptext1">Peer to Peer video chat Website Built on Rails 5 Using Postgres Database </span>
           <a href="https://enigmatic-springs-56858.herokuapp.com/"  class="animated fadeIn">Face Time World<br><img class="imgB" src="images/death-star-clipart-1.jpg"></a>
         </div>
           <div class="tooltip">
             <span class="tooltiptext">Cutting Edge Personal Training  Fitness App With Full CRUD Capabilities </span>
           <a href="https://arcane-scrubland-17622.herokuapp.com/" class="animated fadeInUp">Personal Trainer App<img class="imgB" src="images/thisone.gif"></a>
         </div>
-          <div class="tooltip">
-            <span class="tooltiptext">Group Project Collaboration On GitHub Making A Single Page App Built With The MEAN STACK</span>
+          <div class="tooltip2">
+            <span class="tooltiptext2">Group Project Collaboration On GitHub Making A Single Page App Built With The MEAN STACK</span>
           <a href="https://erikslewis.github.io/gofilter/"class="animated lightSpeedIn">Photo Filter <img class="imgB" src="images/xx.gif"></a>
 </div>
       </div>
@@ -90,7 +90,7 @@
 </div>
 <div id="Resume" class="tabcontent">
   <h3>Résumé</h3><br>
-  <iframe src="https://resume.creddle.io/embed/c32s35c8got"
+  <iframe src="https://resume.creddle.io/resume/c32s35c8got"
   width="850" height="1100" seamless></iframe>
 </div>
 <div id="Projects" class="tabcontent">
@@ -117,7 +117,7 @@
   <div id="About" class="tabcontent">
     <h3>About Me</h3><br>
     <img src="images/148476564950119.png" charset="utf-8" style="width:300px; height:300px;">
-    <h2> Hi I'm Erik Shepard-Lewis, a former Rugby League player. I have just Completed a full time 9am to 5pm 3 month immersive training program at General Assembly. Solely focused on building my skills to become full stack Web Developer. I have obtained many skills as listed in the skill section. Every day I'm Continuously trying to learn and master new languages, frameworks and databases. I'm also an extremely fast learner. I love building things, helping people and being creative, making ideas come to life. The possibilities are limitless!  </h2>
+    <h2> Hi I'm Erik Shepard-Lewis, a former Rugby League player. I have Completed a full time 9am to 5pm, 3 month immersive training program at General Assembly. Solely focused on building my skills to become full stack Web Developer. I have obtained many skills as listed in the skill section. Every day I'm Continuously trying to learn and master new languages, frameworks and databases. I'm also an extremely fast learner. I love building things, helping people and being creative, making ideas come to life. The possibilities are limitless!  </h2>
 </div>
 
 <div class="Fly">
