--- a/index.html
+++ b/index.html
@@ -101,11 +101,11 @@
     <button class="dropbtn">Project Prototypes</button>
   </div>
     <div class="dropdown-content">
-      <a href="https://erikslewis.github.io/iron-man/"><img src="images/imageedit_7_5022970184.png"/><br>IRONMAN GAME</a>
-      <a href="https://erikslewis.github.io/pixart_js/"><img src="images/sshot4ceba87fb2a60.jpg"/><br>PICASSO ART!</a>
+      <a href="https://erikslewis.github.io/iron-man/"><img class="work1" src="images/animated-star-wars-image-0072.gif"/><br>IRONMAN GAME</a>
+      <a href="https://erikslewis.github.io/pixart_js/"><img class="work"src="images/animated-star-wars-image-0098.gif"/><br>PICASSO ART!</a>
 
-      <a href="https://erikslewis.github.io/Video-chat/"><img src="images/15910186_10207444276817050_233251890_n.jpg"/><br>Face Time World </a>
-      <a href="https://erikslewis.github.io/hangmanproject/"><img src="images/PICw.jpg"/><br>HANGMAN GAME</a>
+      <a href="https://erikslewis.github.io/Video-chat/"><img class="work"src="images/x-wing-dribbble.gif"/><br>Face Time World </a>
+      <a  href="https://erikslewis.github.io/hangmanproject/"><img  src="images/PICw.jpg"/><br>HANGMAN GAME</a>
 
     </div>
   </div>
