--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 
       <div id="myDropdown" class="dropdown-content">
         <div class="tooltip1">
-          <span class="tooltiptext1">Peer to Peer video chat Website Built on Rails 5 Using Postgres Database </span>
+          <span class="tooltiptext1">Peer to Peer video chat Website Built on Rails 5 Using PostgreSQL Database </span>
           <a href="https://enigmatic-springs-56858.herokuapp.com/"  class="animated fadeIn">Face Time World<br><img class="imgB" src="images/death-star-clipart-1.jpg"></a>
         </div>
           <div class="tooltip">
@@ -101,12 +101,22 @@
     <button class="dropbtn">Project Prototypes</button>
   </div>
     <div class="dropdown-content">
+      <div class="tooltip2">
+        <span class="tooltiptext2">Iron man Single player mobile game built with html5, css and javascript</span>
       <a href="https://erikslewis.github.io/iron-man/"><img class="work1" src="images/animated-star-wars-image-0072.gif"/><br>IRONMAN GAME</a>
-      <a href="https://erikslewis.github.io/pixart_js/"><img class="work"src="images/animated-star-wars-image-0098.gif"/><br>PICASSO ART!</a>
-
+    </div>
+    <div class="tooltip2">
+      <span class="tooltiptext2">A Multiplayer HangMan game built with Html5, javascript and css</span>
+      <a  href="https://erikslewis.github.io/hangmanproject/"><img  src="images/graphics-star-wars-896705.gif"/><br>HANGMAN GAME</a>
+    </div>
+    <div class="tooltip2">
+      <span class="tooltiptext2">Face time world mobile view version. Without the backend or User Auth.</span>
       <a href="https://erikslewis.github.io/Video-chat/"><img class="work"src="images/x-wing-dribbble.gif"/><br>Face Time World </a>
-      <a  href="https://erikslewis.github.io/hangmanproject/"><img  src="images/PICw.jpg"/><br>HANGMAN GAME</a>
-
+    </div>
+      <div class="tooltip2">
+        <span class="tooltiptext2">General Assembly Class Exercise Developing a drawing Website. </span>
+<a href="https://erikslewis.github.io/pixart_js/"><img class="work"src="images/animated-star-wars-image-0098.gif"/><br>PICASSO ART!</a>
+</div>
     </div>
   </div>
 </div>
