resume project update

--- a/index.html
+++ b/index.html
@@ -19,20 +19,7 @@
     <button id="myton" class="animated zoomInDown" ><img class="img2" src="images/Down_Arrow_Download.png" class="dropbtn"></button><br>
   </div>
 
-      <div id="myDropdown" class="dropdown-content">
-        <div class="tooltip1">
-          <span class="tooltiptext1">Peer to Peer video chat Website Built on Rails 5 Using PostgreSQL Database </span>
-          <a href="https://enigmatic-springs-56858.herokuapp.com/"  class="animated fadeIn">Face Time World<br><img class="imgB" src="images/death-star-clipart-1.jpg"></a>
-        </div>
-          <div class="tooltip">
-            <span class="tooltiptext">Cutting Edge Personal Training  Fitness App With Full CRUD Capabilities </span>
-          <a href="https://arcane-scrubland-17622.herokuapp.com/" class="animated fadeInUp">Personal Trainer App<img class="imgB" src="images/thisone.gif"></a>
-        </div>
-          <div class="tooltip2">
-            <span class="tooltiptext2">Group Project Collaboration On GitHub Making A Single Page App Built With The MEAN STACK</span>
-          <a href="https://erikslewis.github.io/gofilter/"class="animated lightSpeedIn">Photo Filter <img class="imgB" src="images/xx.gif"></a>
-</div>
-      </div>
+
     </div><br>
 
     <li><a href="javascript:void(0)" class="animated zoomIn" class="tablinks" onclick="openCity(event, 'Projects')">PROJECTS</a></li>
@@ -90,8 +77,8 @@
 </div>
 <div id="Resume" class="tabcontent">
   <h3>Résumé</h3><br>
-  <iframe src="https://resume.creddle.io/resume/c32s35c8got"
-  width="850" height="1100" seamless></iframe>
+  <a href="https://resume.creddle.io/resume/c32s35c8got"><img src="images/resume-icon-png-5.png"  ></a>
+
 </div>
 <div id="Projects" class="tabcontent">
 
@@ -101,17 +88,29 @@
     <button class="dropbtn">Project Prototypes</button>
   </div>
     <div class="dropdown-content">
+      <div class="tooltip1">
+        <span class="tooltiptext1">Peer to Peer video chat & video conference Website. Built on Rails 5 Using PostgreSQL Database </span>
+        <a href="https://enigmatic-springs-56858.herokuapp.com/"  class="animated fadeIn">Face Time World<br><img class="imgB" src="images/death-star-clipart-1.jpg"></a>
+      </div>
+        <div class="tooltip">
+          <span class="tooltiptext">Cutting Edge Personal Training Fitness App Built on Rails 5 with Full CRUD Capabilities </span>
+        <a href="https://arcane-scrubland-17622.herokuapp.com/" class="animated fadeInUp">Personal Trainer App<img class="imgB" src="images/thisone.gif"></a>
+      </div>
+        <div class="tooltip2">
+          <span class="tooltiptext2">Group Project Collaboration On GitHub Making A Single Page App Built With The MEAN STACK</span>
+        <a href="https://erikslewis.github.io/gofilter/"class="animated lightSpeedIn">Photo Filter <img class="imgB" src="images/xx.gif"></a>
+</div>
       <div class="tooltip2">
-        <span class="tooltiptext2">Iron man Single player mobile game built with html5, css and javascript</span>
+        <span class="tooltiptext2">Iron man Single player mobile game built with HTML5, CSS and Javascript</span>
       <a href="https://erikslewis.github.io/iron-man/"><img class="work1" src="images/animated-star-wars-image-0072.gif"/><br>IRONMAN GAME</a>
     </div>
     <div class="tooltip2">
-      <span class="tooltiptext2">A Multiplayer HangMan game built with Html5, javascript and css</span>
+      <span class="tooltiptext2">A Multiplayer HangMan game built with HTML5, Javascript and CSS</span>
       <a  href="https://erikslewis.github.io/hangmanproject/"><img  src="images/graphics-star-wars-896705.gif"/><br>HANGMAN GAME</a>
     </div>
     <div class="tooltip2">
       <span class="tooltiptext2">Face time world mobile view version. Without the backend or User Auth.</span>
-      <a href="https://erikslewis.github.io/Video-chat/"><img class="work"src="images/x-wing-dribbble.gif"/><br>Face Time World </a>
+      <a href="https://erikslewis.github.io/Video-chat/"><img class="imgB"src="images/x-wing-dribbble.gif"/><br>Face Time World </a>
     </div>
       <div class="tooltip2">
         <span class="tooltiptext2">General Assembly Class Exercise Developing a drawing Website. </span>
@@ -152,17 +151,7 @@
 <br>
 <br>
 <br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
+
 <a href="https://www.linkedin.com/in/erik-shepard-lewis">
 				<img  class="img2" src="images/097145-3d-glossy-blue-orb-icon-social-media-logos-linkedin-logo-square2.png" alt="Linked-In"></a>
       <a href="https://www.codecademy.com/methodSlayer60817">
