--- a/index.html
+++ b/index.html
@@ -93,21 +93,22 @@
         <a href="https://enigmatic-springs-56858.herokuapp.com/"  class="animated fadeIn">Face Time World<br><img class="imgB" src="images/death-star-clipart-1.jpg"></a>
       </div>
         <div class="tooltip">
-          <span class="tooltiptext">Cutting Edge Personal Training Fitness App Built on Rails 5 with Full CRUD Capabilities </span>
+          <span class="tooltiptext">Cutting Edge Personal Training Fitness App With Voice Command Music Player Built on Rails 5 with Full CRUD Capabilities </span>
         <a href="https://arcane-scrubland-17622.herokuapp.com/" class="animated fadeInUp">Personal Trainer App<img class="imgB" src="images/thisone.gif"></a>
       </div>
         <div class="tooltip2">
           <span class="tooltiptext2">Group Project Collaboration On GitHub Making A Single Page App Built With The MEAN STACK</span>
         <a href="https://erikslewis.github.io/gofilter/"class="animated lightSpeedIn">Photo Filter <img class="imgB" src="images/xx.gif"></a>
 </div>
+<div class="tooltip2">
+  <span class="tooltiptext2">A Multiplayer HangMan game built with HTML5, Javascript and CSS</span>
+  <a  href="https://erikslewis.github.io/hangmanproject/"><img  src="images/graphics-star-wars-896705.gif"/><br>HANGMAN GAME</a>
+</div>
       <div class="tooltip2">
         <span class="tooltiptext2">Iron man Single player mobile game built with HTML5, CSS and Javascript</span>
       <a href="https://erikslewis.github.io/iron-man/"><img class="work1" src="images/animated-star-wars-image-0072.gif"/><br>IRONMAN GAME</a>
     </div>
-    <div class="tooltip2">
-      <span class="tooltiptext2">A Multiplayer HangMan game built with HTML5, Javascript and CSS</span>
-      <a  href="https://erikslewis.github.io/hangmanproject/"><img  src="images/graphics-star-wars-896705.gif"/><br>HANGMAN GAME</a>
-    </div>
+
     <div class="tooltip2">
       <span class="tooltiptext2">Face time world mobile view version. Without the backend or User Auth.</span>
       <a href="https://erikslewis.github.io/Video-chat/"><img class="imgB"src="images/x-wing-dribbble.gif"/><br>Face Time World </a>
