--- a/index.html
+++ b/index.html
@@ -114,7 +114,11 @@
       <a href="https://erikslewis.github.io/Video-chat/"><img class="imgB"src="images/x-wing-dribbble.gif"/><br>Face Time World </a>
     </div>
       <div class="tooltip2">
-        <span class="tooltiptext2">General Assembly Class Exercise Developing a drawing Website. </span>
+        <span class="tooltiptext2">General Assembly class exercise using REACT to create a movie search site. </span>
+<a href="https://erikslewis.github.io/React-Movie/"><img class="work"src="images/animated-star-wars-image-0098.gif"/><br>React Movie Finder</a>
+</div>
+<div class="tooltip2">
+  <span class="tooltiptext2">General Assembly Class Exercise Developing a drawing Website. </span>
 <a href="https://erikslewis.github.io/pixart_js/"><img class="work"src="images/animated-star-wars-image-0098.gif"/><br>PICASSO ART!</a>
 </div>
     </div>
