--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
     </div>
     <div class="tooltip2">
       <span class="tooltiptext2">General Assembly class exercise using REACT to create a movie search site. </span>
-<a href="https://erikslewis.github.io/React-Movie/"><img class="work"src="images/animated-star-wars-image-0047.gif"/><br>React Movie Search</a>
+<a href="https://erikslewis.github.io/React-Movie/"><img class="imgB" src="images/animated-star-wars-image-0047.gif"/><br>React Movie Search</a>
 </div>
     <div class="tooltip2">
       <span class="tooltiptext2">Face time world mobile view version. Without the backend or User Auth.</span>
