--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
 </div>
 <div class="tooltip2">
   <span class="tooltiptext2">Group Project Collaboration On GitHub Making A Single Page App Built With The MEAN STACK</span>
-<a href="https://erikslewis.github.io/gofilter/"class="animated lightSpeedIn">Photo Filter <img class="imgB" src="images/xx.gif"></a>
+<a href="https://erikslewis.github.io/gofilter/"class="animated lightSpeedIn"><img class="imgB" src="images/xx.gif"/><br>Photo Filter</a>
 </div>
     </div>
   </div>
