--- a/index.html
+++ b/index.html
@@ -99,32 +99,32 @@
 
 <div class="tooltip2">
   <span class="tooltiptext2">A Multiplayer HangMan game built with HTML5, Javascript and CSS</span>
-  <a  href="https://erikslewis.github.io/hangmanproject/"><img  src="images/graphics-star-wars-896705.gif"/><br>HANGMAN GAME</a>
+  <a  href="https://erikslewis.github.io/hangmanproject/"><img class="imgB" src="images/graphics-star-wars-896705.gif"/><br>HANGMAN GAME</a>
 </div>
       <div class="tooltip2">
         <span class="tooltiptext2">Iron man Single player mobile game built with HTML5, CSS and Javascript</span>
-      <a href="https://erikslewis.github.io/iron-man/"><img class="work1" src="images/animated-star-wars-image-0072.gif"/><br>IRONMAN GAME</a>
+      <a href="https://erikslewis.github.io/iron-man/"><img class="imgB" src="images/animated-star-wars-image-0072.gif"/><br>IRONMAN GAME</a>
     </div>
     <div class="tooltip2">
       <span class="tooltiptext2">General Assembly class exercise using REACT to create a movie search site. </span>
-<a href="https://erikslewis.github.io/React-Movie/"><img class="imgB" src="images/animated-star-wars-image-0047.gif"/><br>React Movie Search</a>
+<a href="https://erikslewis.github.io/React-Movie/"><img class="imgB" src="images/a14.gif"/><br>React Movie Search</a>
 </div>
     <div class="tooltip2">
-      <span class="tooltiptext2">Face time world mobile view version. Without the backend or User Auth.</span>
-      <a href="https://erikslewis.github.io/Video-chat/"><img class="imgB"src="images/x-wing-dribbble.gif"/><br>Face Time World </a>
+      <span class="tooltiptext2">Face time world mobile app version. Without the backend or User Auth.</span>
+      <a href="https://erikslewis.github.io/Video-chat/"><img class="imgB"src="images/a16.gif"/><br>Face Time World </a>
     </div>
 
 <div class="tooltip2">
   <span class="tooltiptext2">General Assembly Class Exercise Developing a drawing Website. </span>
-<a href="https://erikslewis.github.io/pixart_js/"><img class="work"src="images/animated-star-wars-image-0098.gif"/><br>PICASSO ART!</a>
+<a href="https://erikslewis.github.io/pixart_js/"><img class="imgB"src="images/assaultship_crash2.gif"/><br>PICASSO ART!</a>
 </div>
 <div class="tooltip2">
   <span class="tooltiptext2">Group Project Collaboration On GitHub Making A Single Page App Built With The MEAN STACK</span>
-<a href="https://erikslewis.github.io/gofilter/"class="animated lightSpeedIn"><img class="imgB" src="images/xx.gif"/><br>Photo Filter</a>
+<a href="https://erikslewis.github.io/gofilter/"class="animated lightSpeedIn"><img class="imgB" src="images/pirateA.gif"/><br>Photo Filter</a>
 </div>
 <div class="tooltip2">
   <span class="tooltiptext2">401MMA website ProtoType for Professional Fighter Mike Connors</span>
-<a href="https://erikslewis.github.io/401mma/"class="animated lightSpeedIn"><img class="imgB" src="images/xx.gif"/><br>401 MMA</a>
+<a href="https://erikslewis.github.io/401mma/"class="animated lightSpeedIn"><img class="imgB" src="images/89.gif"/><br>401 MMA</a>
 </div>
     </div>
   </div>
