--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
   <body>
 <div>
   <ul class="tab">
-    <h1 class="animated zoomInDown">Welcome To InterGalactic<br> Web Development</h1>
-    <h3 class="animated fadeIn">By: Erik Shepard-Lewis <br>Exploration Controls</h3><br>
+    <h1 class="animated zoomInDown">Erik Shepard-Lewis<br> Web Developer</h1>
+    <h3 class="animated fadeIn">Exploration Controls</h3><br>
 
 
     <div class="dropdown">
@@ -101,19 +101,18 @@
   <span class="tooltiptext2">A Multiplayer HangMan game built with HTML5, Javascript and CSS</span>
   <a  href="https://erikslewis.github.io/hangmanproject/"><img class="imgB" src="images/graphics-star-wars-896705.gif"/><br>HANGMAN GAME</a>
 </div>
-      <div class="tooltip2">
-        <span class="tooltiptext2">Iron man Single player mobile game built with HTML5, CSS and Javascript</span>
-      <a href="https://erikslewis.github.io/iron-man/"><img class="imgB" src="images/animated-star-wars-image-0072.gif"/><br>IRONMAN GAME</a>
-    </div>
+<div class="tooltip2">
+  <span class="tooltiptext2">Face time world mobile app version. Without the backend or User Auth.</span>
+  <a href="https://erikslewis.github.io/Video-chat/"><img class="work"src="images/graphics-star-wars-034923.gif"/><br>Face Time World </a>
+</div>
     <div class="tooltip2">
       <span class="tooltiptext2">General Assembly class exercise using REACT to create a movie search site. </span>
 <a href="https://erikslewis.github.io/React-Movie/"><img class="imgB" src="images/a14.gif"/><br>React Movie Search</a>
 </div>
-    <div class="tooltip2">
-      <span class="tooltiptext2">Face time world mobile app version. Without the backend or User Auth.</span>
-      <a href="https://erikslewis.github.io/Video-chat/"><img class="imgB"src="images/a16.gif"/><br>Face Time World </a>
-    </div>
-
+<div class="tooltip2">
+  <span class="tooltiptext2">Iron man Single player mobile game built with HTML5, CSS and Javascript</span>
+<a href="https://erikslewis.github.io/iron-man/"><img class="work1" src="images/graphics-star-wars-229414.gif"/><br>IRONMAN GAME</a>
+</div>
 <div class="tooltip2">
   <span class="tooltiptext2">General Assembly Class Exercise Developing a drawing Website. </span>
 <a href="https://erikslewis.github.io/pixart_js/"><img class="imgB"src="images/assaultship_crash2.gif"/><br>PICASSO ART!</a>
