--- a/index.html
+++ b/index.html
@@ -5,13 +5,29 @@
     <link rel="stylesheet" href="app.css">
     <script src="app.js"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.5.2/animate.min.css">
+<link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <title></title>
   </head>
   <body>
 <div>
+</head>
+<body>
+
+<div id="mySidenav" class="sidenav">
+  <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
+
+  <a href="javascript:void(0)" class="animated zoomIn" class="tablinks" onclick="openCity(event, 'Projects')">PROJECTS</a>
+  <a href="javascript:void(0)" class="animated zoomIn"class="tablinks" onclick="openCity(event, 'Skills')">SKILLS</a></li>
+  <a href="javascript:void(0)" class="animated zoomIn"class="tablinks" onclick="openCity(event, 'Resume')">RESUME</a></li>
+  <a href="javascript:void(0)" class="animated zoomIn"class="tablinks" onclick="openCity(event, 'About')">ABOUT ME</a></li>
+  <a href="javascript:void(0)" class="animated zoomIn"class="tablinks" onclick="openCity(event, 'Contact')">CONTACT</a></li>
+
+</div>
+
   <ul class="tab">
     <h1 class="animated zoomInDown">Erik Shepard-Lewis<br> Web Developer</h1>
     <h3 class="animated fadeIn">Exploration Controls</h3><br>
+
 
 
     <div class="dropdown">
@@ -21,12 +37,7 @@
 
 
     </div><br>
-
-    <li><a href="javascript:void(0)" class="animated zoomIn" class="tablinks" onclick="openCity(event, 'Projects')">PROJECTS</a></li>
-  <li><a href="javascript:void(0)" class="animated zoomIn"class="tablinks" onclick="openCity(event, 'Skills')">SKILLS</a></li>
-      <li><a href="javascript:void(0)" class="animated zoomIn"class="tablinks" onclick="openCity(event, 'Resume')">Résumé</a></li>
-    <li><a href="javascript:void(0)" class="animated zoomIn"class="tablinks" onclick="openCity(event, 'About')">About Me</a></li>
-  <li><a href="javascript:void(0)" class="animated zoomIn"class="tablinks" onclick="openCity(event, 'Contact')">CONTACT</a></li>
+        <i>MENU<br><span  onclick="openNav()" class="material-icons" style="font-size:48px;color:blue">apps</i></span><br>
 
 
 
@@ -103,7 +114,7 @@
 </div>
 <div class="tooltip2">
   <span class="tooltiptext2">Face time world mobile app version. Without the backend or User Auth.</span>
-  <a href="https://erikslewis.github.io/Video-chat/"><img class="work"src="images/graphics-star-wars-034923.gif"/><br>Face Time World </a>
+  <a href="https://erikslewis.github.io/Video-chat/"><img class="work"src="images/graphics-star-wars-034923.gif"/><br>Face Time World Mobile</a>
 </div>
     <div class="tooltip2">
       <span class="tooltiptext2">General Assembly class exercise using REACT to create a movie search site. </span>
@@ -115,7 +126,7 @@
 </div>
 <div class="tooltip2">
   <span class="tooltiptext2">General Assembly Class Exercise Developing a drawing Website. </span>
-<a href="https://erikslewis.github.io/pixart_js/"><img class="imgB"src="images/assaultship_crash2.gif"/><br>PICASSO ART!</a>
+<a href="https://erikslewis.github.io/pixart_js/"><img class="huge"src="images/assaultship_crash2.gif"/><br>PICASSO ART!</a>
 </div>
 <div class="tooltip2">
   <span class="tooltiptext2">Group Project Collaboration On GitHub Making A Single Page App Built With The MEAN STACK</span>
