--- a/index.html
+++ b/index.html
@@ -27,18 +27,10 @@
   <ul class="tab">
     <h1 class="animated zoomInDown">Erik Shepard-Lewis<br> Web Developer</h1>
     <h3 class="animated fadeIn">Exploration Controls</h3><br>
+<div class="dropdown">
+<i class="animated zoomInDown" ><span   onclick="openNav()" class="material-icons" style="cursor:pointer;font-size:48px;color:blue">apps</i></span><br>
 
-
-
-    <div class="dropdown">
-      <div class="animated infinite pulse">
-    <button id="myton" class="animated zoomInDown" ><img class="img2" src="images/Down_Arrow_Download.png" class="dropbtn"></button><br>
-  </div>
-
-
-    </div><br>
-        <i>MENU<br><span  onclick="openNav()" class="material-icons" style="font-size:48px;color:blue">apps</i></span><br>
-
+    </div>
 
 
 <div id="Contact" class="tabcontent">
