--- a/index.html
+++ b/index.html
@@ -133,10 +133,10 @@
 </div>
 
 <div id="Resume" class="tabcontent">
-  <h3>Resume</h3>
+  <h3>RESUME</h3>
 </div>
   <div id="About" class="tabcontent">
-    <h3>About Me</h3><br>
+    <h3>ABOUT ME</h3><br>
     <img src="images/148476564950119.png" charset="utf-8" style="width:300px; height:300px;">
     <h2> Hi I'm Erik Shepard-Lewis, a former Rugby League player. I have Completed a full time 9am to 5pm, 3 month immersive training program at General Assembly. Solely focused on building my skills to become full stack Web Developer. I have obtained many skills as listed in the skill section. Every day I'm Continuously trying to learn and master new languages, frameworks and databases. I'm also an extremely fast learner. I love building things, helping people and being creative, making ideas come to life. The possibilities are limitless!  </h2>
 </div>
