--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
 <a href="https://erikslewis.github.io/gofilter/"class="animated lightSpeedIn"><img class="imgB" src="images/pirateA.gif"/><br>Photo Filter</a>
 </div>
 <div class="tooltip2">
-  <span class="tooltiptext2">401MMA website ProtoType for Professional Fighter Mike Connors</span>
+  <span class="tooltiptext2">401MMA.COM ProtoType website mobile app for Professional Fighter Mike Connors</span>
 <a href="https://erikslewis.github.io/401mma/"class="animated lightSpeedIn"><img class="imgB" src="images/89.gif"/><br>401 MMA</a>
 </div>
     </div>
