--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
       </div>
         <div class="tooltip">
           <span class="tooltiptext">Cutting Edge Personal Training Fitness App With Voice Command Music Player Built on Rails 5 with Full CRUD Capabilities </span>
-        <a href="https://arcane-scrubland-17622.herokuapp.com/" class="animated fadeInUp">Personal Trainer App<img class="imgB" src="images/thisone.gif"></a>
+        <a href="https://arcane-scrubland-17622.herokuapp.com/" class="animated fadeInUp"><img class="imgB" src="images/thisone.gif">Personal Trainer App</a>
       </div>
 
 <div class="tooltip2">
