--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
     <div class="dropdown-content">
       <div class="tooltip1">
         <span class="tooltiptext1">Peer to Peer video chat & video conference Website. Built on Rails 5 Using PostgreSQL Database </span>
-        <a href="https://enigmatic-springs-56858.herokuapp.com/"  class="animated fadeIn">Face Time World<br><img class="imgB" src="images/death-star-clipart-1.jpg"></a>
+        <a href="https://enigmatic-springs-56858.herokuapp.com/"  class="animated fadeIn"><img class="imgB" src="images/death-star-clipart-1.jpg"><br>Face Time World</a>
       </div>
         <div class="tooltip">
           <span class="tooltiptext">Cutting Edge Personal Training Fitness App With Voice Command Music Player Built on Rails 5 with Full CRUD Capabilities </span>
