--- a/index.html
+++ b/index.html
@@ -172,7 +172,7 @@
             				<img class="github" src="images/Github-icon.png"></a>
                     <a href="https://www.codewars.com/users/DeadShotE">
                             <img class="war" src="images/newist.jpeg"></a><br>
-<img class="logo" src="images/best.png">
+<img class="logo" src="images/15910186_10207444276817050_233251890_n.jpg">
 
 </ul>
 </div>
