--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
             <div id="Angular.JS" class="tabcontent">
               <div class="tooltip2">
               <span class="tooltiptext2">Group Project Collaboration On GitHub Making A Single Page App Built With The MEAN STACK</span>
-              <a href="https://erikslewis.github.io/gofilter/"class="animated lightSpeedIn"><img class="imgB" src="images/pirateA.gif"/><br>Photo Filter</a>
+              <a href="https://erikslewis.github.io/gofilter/"class="animated lightSpeedIn"><img class="imgB" src="images/a14.gif"/><br>Photo Filter</a>
               </div>
           </div>
               <div id="javascripthtml5css3" class="tabcontent">
@@ -125,26 +125,27 @@
                 <a  href="https://erikslewis.github.io/hangmanproject/" class="animated slideInUp"><img class="imgB" src="images/thisone.gif"/><br>HANGMAN GAME</a>
                 </div>
                 <div class="tooltip2">
-                <span class="tooltiptext2">Instagram like social media app for connectiong with friends</span>
-                <a href="https://desolate-earth-24328.herokuapp.com/" class="animated slideInUp"><img class="work"src="images/89.gif"/><br>The Plug</a>
-                </div>
-                <div class="tooltip2">
                 <span class="tooltiptext2">Iron man Single player mobile game built with HTML5, CSS and Javascript</span>
                 <a href="https://erikslewis.github.io/iron-man/" class="animated slideInUp"><img class="work1" src="images/graphics-star-wars-229414.gif"/><br>IRONMAN GAME</a>
                 </div>
+                <br>
                 <div class="tooltip2">
                 <span class="tooltiptext2">General Assembly Class Exercise Developing a drawing Website. </span>
                 <a href="https://erikslewis.github.io/pixart_js/" class="animated slideInUp"><img class="huge"src="images/assaultship_crash2.gif"/><br>PICASSO ART!</a>
                 </div>
                 <div class="tooltip2">
                 <span class="tooltiptext2">401MMA.COM ProtoType website mobile app for Professional Fighter Mike Connors</span>
-                <a href="https://erikslewis.github.io/401mma/"class="animated lightSpeedIn"><img class="imgB" src="images/graphics-star-wars-034923.gif"/><br>401 MMA</a>
+                <a href="https://erikslewis.github.io/401mma/"class="animated lightSpeedIn"><img class="work" src="images/graphics-star-wars-034923.gif"/><br>401 MMA</a>
                 </div>
            </div>
          <div id="React.JS" class="tabcontent">
           <div class="tooltip2">
             <span class="tooltiptext2">General Assembly class exercise using REACT to create a movie search site. </span>
-        <a href="https://erikslewis.github.io/React-Movie/" class="animated slideInUp"><img class="imgB" src="images/a14.gif"/><br>React Movie Search</a>
+        <a href="https://erikslewis.github.io/React-Movie/" class="animated slideInUp"><img class="imgB" src="images/pirateA.gif"/><br>React Movie Search</a>
+        </div>
+        <div class="tooltip2">
+        <span class="tooltiptext2">Instagram like social media app for connectiong with friends</span>
+        <a href="https://desolate-earth-24328.herokuapp.com/" class="animated slideInUp"><img class="imgB"src="images/89.gif"/><br>The Plug</a>
         </div>
 </div>
 
