--- a/index.html
+++ b/index.html
@@ -105,27 +105,27 @@
           </div>
           <div id="RubyonRails" class="tabcontent">
             <div class="tooltip1">
-              <span class="tooltiptext1">Peer to Peer video chat & video conference Website. Built on Rails 5 Using PostgreSQL Database </span>
+              <span class="tooltiptext1">Peer to Peer video chat & video conference Website. Built on Rails 5 Using PostgreSQL Database. </span>
               <a href="https://enigmatic-springs-56858.herokuapp.com/" class="animated zoomInLeft"><img class="imgB" src="images/death-star-clipart-1.jpg"><br>Face Time World</a>
             </div>
               <div class="tooltip">
-                <span class="tooltiptext">Cutting Edge Personal Training Fitness App With Voice Command Music Player Built on Rails 5 with Full CRUD Capabilities </span>
+                <span class="tooltiptext">Cutting Edge Personal Training Fitness App With Voice Command Music Player Built on Rails 5 with Full CRUD Capabilities. </span>
               <a href="https://arcane-scrubland-17622.herokuapp.com/" class="animated zoomInRight"><img class="imgB" src="images/graphics-star-wars-896705.gif"><br>Personal Trainer App</a>
             </div>
           </div>
             <div id="Angular.JS" class="tabcontent">
               <div class="tooltip2">
-              <span class="tooltiptext2">Group Project Collaboration On GitHub Making A Single Page App Built With The MEAN STACK</span>
+              <span class="tooltiptext2">Group Project Collaboration On GitHub Making A Single Page App Built With The MEAN STACK.</span>
               <a href="https://erikslewis.github.io/gofilter/"class="animated lightSpeedIn"><img class="imgB" src="images/a14.gif"/><br>Photo Filter</a>
               </div>
           </div>
               <div id="javascripthtml5css3" class="tabcontent">
                 <div class="tooltip2">
-                <span class="tooltiptext2">A Multiplayer HangMan game built with HTML5, Javascript and CSS</span>
+                <span class="tooltiptext2">A Multiplayer HangMan game built with HTML5, Javascript and CSS.</span>
                 <a  href="https://erikslewis.github.io/hangmanproject/" class="animated slideInUp"><img class="imgB" src="images/thisone.gif"/><br>HANGMAN GAME</a>
                 </div>
                 <div class="tooltip2">
-                <span class="tooltiptext2">Iron man Single player mobile game built with HTML5, CSS and Javascript</span>
+                <span class="tooltiptext2">Iron man Single player mobile game built with HTML5, CSS and Javascript.</span>
                 <a href="https://erikslewis.github.io/iron-man/" class="animated slideInUp"><img class="work1" src="images/graphics-star-wars-229414.gif"/><br>IRONMAN GAME</a>
                 </div>
                 <br>
@@ -134,7 +134,7 @@
                 <a href="https://erikslewis.github.io/pixart_js/" class="animated slideInUp"><img class="huge"src="images/assaultship_crash2.gif"/><br>PICASSO ART!</a>
                 </div>
                 <div class="tooltip2">
-                <span class="tooltiptext2">401MMA.COM ProtoType website mobile app for Professional Fighter Mike Connors</span>
+                <span class="tooltiptext2">401MMA.COM ProtoType website mobile app for Professional Fighter Mike Connors.</span>
                 <a href="https://erikslewis.github.io/401mma/"class="animated lightSpeedIn"><img class="work" src="images/graphics-star-wars-034923.gif"/><br>401 MMA</a>
                 </div>
            </div>
@@ -144,7 +144,7 @@
         <a href="https://erikslewis.github.io/React-Movie/" class="animated slideInUp"><img class="imgB" src="images/pirateA.gif"/><br>React Movie Search</a>
         </div>
         <div class="tooltip2">
-        <span class="tooltiptext2">Instagram like social media app for connectiong with friends</span>
+        <span class="tooltiptext2">React.js Instagram like social media app for connecting with friends.</span>
         <a href="https://desolate-earth-24328.herokuapp.com/" class="animated slideInUp"><img class="imgB"src="images/89.gif"/><br>The Plug</a>
         </div>
 </div>
