--- a/index.html
+++ b/index.html
@@ -44,7 +44,21 @@
                 </li>
               </ul>
             </li>
+            <li class="no-padding">
+              <ul class="collapsible collapsible-accordion">
+                <li>
+                  <a class="collapsible-header">VIDEOS<i class="material-icons">arrow_drop_down</i></a>
+                  <div class="collapsible-body">
+                    <ul>
+                      <li><a href="javascript:void(0)" class="animated slideInLeft" class="tablinks" onclick="openCity(event, 'EditedFilm')">Edited Film</a></li>
+                      <li><a href="javascript:void(0)" class="animated slideInRight"class="tablinks" onclick="openCity(event, 'AppDemos')">App Demo's</a></li>
+                    </ul>
+                  </div>
+                </li>
+              </ul>
+            </li>
           </ul>
+
 
           <ul class="tab">
             <h1 class="animated zoomInDown">Erik Shepard-Lewis<br> Web Developer</h1>
@@ -60,6 +74,15 @@
                   <h2 class="animated rollIn" >E-MAIL: ESLWEBDEVELOPMENT@AOL.COM</h2>
 
           </div>
+
+        </div>
+        <div id="EditedFilm">
+
+        </div>
+      </div>
+      <div id="AppDemos">
+
+      </div>
 
           <div id="Skills" class="tabcontent">
 
@@ -147,8 +170,6 @@
         <span class="tooltiptext2">React.js Instagram like social media app for connecting with friends.</span>
         <a href="https://desolate-earth-24328.herokuapp.com/" class="animated slideInUp"><img class="imgB"src="images/89.gif"/><br>The Plug</a>
         </div>
-</div>
-
 
           <div id="Resume" class="tabcontent">
           <h3>RESUME</h3>
