--- a/index.html
+++ b/index.html
@@ -79,9 +79,15 @@
         <div id="EditedFilm">
 
         </div>
-      </div>
+
       <div id="AppDemos">
 
+      </div>
+
+      <div id="About" class="tabcontent">
+        <h3>ABOUT ME</h3><br>
+        <img src="images/148476564950119.png"  style="width:300px; height:300px;">
+        <h2> Hi I'm Erik Shepard-Lewis, a former Rugby League player. I have Completed a full time 9am to 5pm, 3 month immersive training program at General Assembly. Solely focused on building my skills to become full stack Web Developer. I have obtained many skills as listed in the skill section. Every day I'm Continuously trying to learn and master new languages, frameworks and databases. I'm also an extremely fast learner. I love building things, helping people and being creative, making ideas come to life. The possibilities are limitless!  </h2>
       </div>
 
           <div id="Skills" class="tabcontent">
@@ -174,11 +180,7 @@
           <div id="Resume" class="tabcontent">
           <h3>RESUME</h3>
           </div>
-          <div id="About" class="tabcontent">
-            <h3>ABOUT ME</h3><br>
-            <img src="images/148476564950119.png" charset="utf-8" style="width:300px; height:300px;">
-            <h2> Hi I'm Erik Shepard-Lewis, a former Rugby League player. I have Completed a full time 9am to 5pm, 3 month immersive training program at General Assembly. Solely focused on building my skills to become full stack Web Developer. I have obtained many skills as listed in the skill section. Every day I'm Continuously trying to learn and master new languages, frameworks and databases. I'm also an extremely fast learner. I love building things, helping people and being creative, making ideas come to life. The possibilities are limitless!  </h2>
-          </div>
+
           <div class="Fly">
           <img class="Fly" src="images/tumblr_mzpjx8VJTh1qcoscoo1_400.gif">
           </div>
