--- a/index.html
+++ b/index.html
@@ -58,9 +58,7 @@
               </ul>
             </li>
           </ul>
-
-
-          <ul class="tab">
+  <ul class="tab">
             <h1 class="animated zoomInDown">Erik Shepard-Lewis<br> Web Developer</h1>
             <h3 class="animated fadeIn">Exploration Controls</h3><br>
           <div class="dropdown">
@@ -76,11 +74,18 @@
           </div>
 
         </div>
-        <div id="EditedFilm">
+        <div id="EditedFilm" class="tabcontent">
 
-        </div>
+          <iframe src="https://www.facebook.com/plugins/video.php?href=https%3A%2F%2Fwww.facebook.com%2FLondellShawndell00%2Fvideos%2F1882938825323674%2F&show_text=0&width=560" width="560" height="315"></iframe>
+          <iframe src="https://www.facebook.com/plugins/video.php?href=https%3A%2F%2Fwww.facebook.com%2FLondellShawndell00%2Fvideos%2F1826107014340189%2F&show_text=0&width=560" width="560" height="315"></iframe>
+          <iframe src="https://www.facebook.com/plugins/video.php?href=https%3A%2F%2Fwww.facebook.com%2FLondellShawndell00%2Fvideos%2F1787622311521993%2F&show_text=0&width=560" width="560" height="315"></iframe>
+          <iframe src="https://www.facebook.com/plugins/video.php?href=https%3A%2F%2Fwww.facebook.com%2FLondellShawndell00%2Fvideos%2F1736900933260798%2F&show_text=0&width=560" width="560" height="315"></iframe>
+          <iframe src="https://www.facebook.com/plugins/video.php?href=https%3A%2F%2Fwww.facebook.com%2FLondellShawndell00%2Fvideos%2F1798695657081325%2F&show_text=0&width=560" width="560" height="315"></iframe>
+          <iframe src="https://www.facebook.com/plugins/video.php?href=https%3A%2F%2Fwww.facebook.com%2FLondellShawndell00%2Fvideos%2F1742940259323532%2F&show_text=0&width=560" width="560" height="315"></iframe><br>
+<iframe src="https://www.facebook.com/plugins/video.php?href=https%3A%2F%2Fwww.facebook.com%2FLondellShawndell00%2Fvideos%2F1726066427677582%2F&show_text=0&width=400" width="400" height="400" style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowTransparency="true" allowFullScreen="true"></iframe>
+</div>
 
-      <div id="AppDemos">
+      <div id="AppDemos" class="tabcontent">
 
       </div>
 
