--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
 </div>
 
       <div id="AppDemos" class="tabcontent">
-
+<h3>coming soon</h3>
       </div>
 
       <div id="About" class="tabcontent">
@@ -95,6 +95,11 @@
         <h2> Hi I'm Erik Shepard-Lewis, a former Rugby League player. I have Completed a full time 9am to 5pm, 3 month immersive training program at General Assembly. Solely focused on building my skills to become full stack Web Developer. I have obtained many skills as listed in the skill section. Every day I'm Continuously trying to learn and master new languages, frameworks and databases. I'm also an extremely fast learner. I love building things, helping people and being creative, making ideas come to life. The possibilities are limitless!  </h2>
       </div>
 
+      <div id="Resume" class="tabcontent">
+      <h3 class="animated rollIn">Resume</h3><br>
+      <a href="https://resume.creddle.io/resume/c32s35c8got"><img class="animated rollIn" src="images/resume-icon-png-5.png"  ></a>
+
+      </div>
           <div id="Skills" class="tabcontent">
 
 
@@ -132,11 +137,7 @@
           </div>
           </div>
           </div>
-          <div id="Resume" class="tabcontent">
-          <h3 class="animated rollIn">Resume</h3><br>
-          <a href="https://resume.creddle.io/resume/c32s35c8got"><img class="animated rollIn" src="images/resume-icon-png-5.png"  ></a>
 
-          </div>
           <div id="RubyonRails" class="tabcontent">
             <div class="tooltip1">
               <span class="tooltiptext1">Peer to Peer video chat & video conference Website. Built on Rails 5 Using PostgreSQL Database. </span>
@@ -182,10 +183,14 @@
         <a href="https://desolate-earth-24328.herokuapp.com/" class="animated slideInUp"><img class="imgB"src="images/89.gif"/><br>The Plug</a>
         </div>
 
+
+
           <div id="Resume" class="tabcontent">
           <h3>RESUME</h3>
           </div>
 
+
+          </div>
           <div class="Fly">
           <img class="Fly" src="images/tumblr_mzpjx8VJTh1qcoscoo1_400.gif">
           </div>
@@ -198,7 +203,6 @@
           <img class="Fly" src='images/giffire.gif'></div>
           </div>
           </div>
-
           <br>
           <br>
           <br>
@@ -218,12 +222,8 @@
                             <img class="github" src="images/Github-icon.png"></a>
                             <a href="https://www.codewars.com/users/DeadShotE">
                                     <img class="war" src="images/newist.jpeg"></a><br>
-          <img class="logo" src="images/15910186_10207444276817050_233251890_n.jpg">
-
-          </ul>
-          </div>
-
-
+                                      <img class="logo" src="images/15910186_10207444276817050_233251890_n.jpg">
+</ul>
     </body>
   </html>
 
