--- a/index.html
+++ b/index.html
@@ -185,17 +185,7 @@
           <div id ="myAnimation">
           <img class="Fly" src='images/giffire.gif'></div>
           </div>
-          </div>
-          <br>
-          <br>
-          <br>
-          <br>
-          <br>
-          <br>
-          <br>
-          <br>
-          <br>
-          <br>
+          </div><br><br><br><br><br><br><br><br><br><br>
           <a href="https://www.linkedin.com/in/erik-shepard-lewis">
                 <img  class="img2" src="images/097145-3d-glossy-blue-orb-icon-social-media-logos-linkedin-logo-square2.png" alt="Linked-In"></a>
               <a href="https://www.codecademy.com/methodSlayer60817">
