--- a/index.html
+++ b/index.html
@@ -77,8 +77,7 @@
           <iframe src="https://www.facebook.com/plugins/video.php?href=https%3A%2F%2Fwww.facebook.com%2FLondellShawndell00%2Fvideos%2F1787622311521993%2F&show_text=0&width=560" width="560" height="315"></iframe>
           <iframe src="https://www.facebook.com/plugins/video.php?href=https%3A%2F%2Fwww.facebook.com%2FLondellShawndell00%2Fvideos%2F1882938825323674%2F&show_text=0&width=560" width="560" height="315"></iframe>
           <iframe src="https://www.facebook.com/plugins/video.php?href=https%3A%2F%2Fwww.facebook.com%2FLondellShawndell00%2Fvideos%2F1798695657081325%2F&show_text=0&width=560" width="560" height="315"></iframe>
-          <iframe src="https://www.facebook.com/plugins/video.php?href=https%3A%2F%2Fwww.facebook.com%2FLondellShawndell00%2Fvideos%2F1742940259323532%2F&show_text=0&width=560" width="560" height="315"></iframe><br>
-<iframe src="https://www.facebook.com/plugins/video.php?href=https%3A%2F%2Fwww.facebook.com%2FLondellShawndell00%2Fvideos%2F1726066427677582%2F&show_text=0&width=400" width="400" height="400" style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowTransparency="true" allowFullScreen="true"></iframe>
+          <iframe src="https://www.facebook.com/plugins/video.php?href=https%3A%2F%2Fwww.facebook.com%2FLondellShawndell00%2Fvideos%2F1742940259323532%2F&show_text=0&width=560" width="560" height="315"></iframe>
 </div>
       <div id="AppDemos" class="tabcontent">
 <h3>coming soon</h3>
