--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
             <h1 class="animated zoomInDown">Erik Shepard-Lewis<br> Web Developer</h1>
             <h3 class="animated fadeIn">Exploration Controls</h3><br>
           <div class="dropdown">
-          <a href="#" data-activates="slide-out" class="button-collapse"><i class="animated zoomInDown"> <span class="material-icons" style="cursor:pointer;font-size:158px;color:blue">apps</i></span></a>
+          <a href="#" data-activates="slide-out" class="button-collapse"><i class="animated zoomInDown"> <span class="material-icons" style="cursor:pointer;font-size:158px;color:blue">apps</i></span></a><img class="hire"src="images/good.png">
           </div>
           <div id="Contact" class="tabcontent">
           <h3 class="animated rollIn">Contact Info</h3><br>
@@ -77,7 +77,7 @@
       </div>
       <div id="About" class="tabcontent">
         <h3>ABOUT ME</h3><br>
-        <img src="images/148476564950119.png"  style="width:300px; height:300px;">
+        <img src="images/148476564950119.png"  style="width:300px; height:300px;"> <img src="images/good.png"  style="width:300px; height:300px;">
         <h2> Hi I'm Erik Shepard-Lewis, a former Rugby League player. I have Completed a full time 9am to 5pm, 3 month immersive training program at General Assembly. Solely focused on building my skills to become full stack Web Developer. I have obtained many skills as listed in the skill section. Every day I'm Continuously trying to learn and master new languages, frameworks and databases. I'm also an extremely fast learner. I love building things, helping people and being creative, making ideas come to life. The possibilities are limitless!  </h2>
       </div>
       <div id="Resume" class="tabcontent">
@@ -199,7 +199,7 @@ $( document ).ready(function() {
   $('.collapsible').collapsible();
 
   $('.button-collapse').sideNav({
-     menuWidth: 600, // Default is 300
+     menuWidth: 700, // Default is 300
      edge: 'left', // Choose the horizontal origin
      closeOnClick: true, // Closes side-nav on <a> clicks, useful for Angular/Meteor
      draggable: true // Choose whether you can drag to open on touch screens
